--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <title>angularDemo</title>
 </head>
-<body>
-  <h1>Angular Demo</h1>
+<body ng-app>
+  <h1>{{ 'Hello ' + 'Angular!'}}</h1>
+  <div>{{ 2 + 3 }}</div>
 
   <script type="text/javascript" src = "https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
 </body>
