--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
   <meta charset="UTF-8">
   <title>angularDemo</title>
 </head>
-<body ng-app>
+<body ng-app="myApp">
   <h1>{{ 'Hello ' + 'Angular!'}}</h1>
+
   <div>{{ 2 + 3 }}</div>
 
+  <div ng-controller='myController'>
+    <input type="text" ng-model=firstName>
+    <br>
+    {{ firstName }}
+  </div>
+
   <script type="text/javascript" src = "https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
+
+  <script>
+    var app = angular.module('myApp',[]);
+
+    app.controller('myController', ['$scope', function($scope){
+      $scope.firstName = 'Archer';
+    }]);
+
+  </script>
 </body>
 </html>
