--- a/index.html
+++ b/index.html
@@ -17,13 +17,7 @@
 
   <script type="text/javascript" src = "https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
 
-  <script>
-    var app = angular.module('myApp',[]);
-
-    app.controller('myController', ['$scope', function($scope){
-      $scope.firstName = 'Archer';
-    }]);
-
-  </script>
+  <script type='text/javascript'
+    src = '/public/js/app.js'></script>
 </body>
 </html>
