--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
 
   <script type='text/javascript'
     src = '/public/js/app.js'></script>
+  <script type='text/javascript'
+    src = '/public/js/controller.js'></script>
 </body>
 </html>
