--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
     src = '/public/js/app.js'></script>
   <script type='text/javascript'
     src = '/public/js/controller.js'></script>
+  <script type='text/javascript'
+    src = '/public/js/values.js'></script>
 </body>
 </html>
