--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>angularDemo</title>
 </head>
 <body ng-app="myApp">
+  {{version}}
   <h1>{{ 'Hello ' + 'Angular!'}}</h1>
 
   <div>{{ 2 + 3 }}</div>
@@ -23,5 +24,8 @@
     src = '/public/js/controller.js'></script>
   <script type='text/javascript'
     src = '/public/js/values.js'></script>
+  <script type='text/javascript'
+    src = '/public/js/constants.js'></script>
+
 </body>
 </html>
