--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <input type="text" ng-model=firstName>
     <br>
     {{ firstName }}
+    <br>
+    {{ genChar }}
   </div>
 
   <script type="text/javascript" src = "https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
@@ -26,6 +28,8 @@
     src = '/public/js/values.js'></script>
   <script type='text/javascript'
     src = '/public/js/constants.js'></script>
+  <script type='text/javascript'
+    src = '/public/js/factories.js'></script>
 
 </body>
 </html>
