--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
       AUTHOR: {{ book.author }} <br>
       PRINTED: {{ book.printed }} <br>
     </div>
+        <br><br><br><br>
+      <input type="text"
+      ng-model='newBook.title'><br>
+
+       <input type="text"
+      ng-model='newBook.author'> <br>
+
+      <input type="text"
+      ng-model='newBook.printed'> <br>
+
+       <input type="submit"
+      ng-click='addBook(newBook)'> <br>
   </div>
 
   <script type="text/javascript" src = "https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
