--- a/index.html
+++ b/index.html
@@ -10,33 +10,15 @@
 
   <div>{{ 2 + 3 }}</div>
 
-  <div ng-controller='myController'>
-    <input type="text" ng-model=firstName>
-    <br>
-    {{ firstName }}
-    <br>
-    {{ genChar }}
-    <br>
-    <div ng-repeat='book in books'>
-      TITLE: {{ book.title }} <br>
-      AUTHOR: {{ book.author }} <br>
-      PRINTED: {{ book.printed }} <br>
-    </div>
-        <br><br><br><br>
-      <input type="text"
-      ng-model='newBook.title'><br>
+<div ng-controller="myController">
+  <a href="/">HOME</a>
+  <a href="/books">BOOKS</a>
+  <div ng-view></div>
+</div>
 
-       <input type="text"
-      ng-model='newBook.author'> <br>
-
-      <input type="text"
-      ng-model='newBook.printed'> <br>
-
-       <input type="submit"
-      ng-click='addBook(newBook)'> <br>
-  </div>
 
   <script type="text/javascript" src = "https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.js"></script>
+  <script type="text/javascript" src = "https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.js"></script>
 
   <script type='text/javascript'
     src = '/public/js/app.js'></script>
@@ -50,5 +32,9 @@
     src = '/public/js/factories.js'></script>
   <script type='text/javascript'
     src = '/public/js/services.js'></script>
+  <script type='text/javascript'
+    src = '/public/js/filters.js'></script>
+  <script type='text/javascript'
+    src = '/public/js/booksController.js'></script>
 </body>
 </html>
